// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/TextField Text Field with KNOBS 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          className="css-12qr1pz-TextField"
        >
          <div
            className="css-11budfe-TextField"
          >
            <div
              className="css-190bw9v-TextField"
            >
              <div
                className="css-ihi55b-IconWrapper"
              >
                <span
                  className="css-1gnbc76-Icon"
                >
                  <span
                    className="css-1k5aruc-Icon"
                  />
                </span>
              </div>
              <div>
                <input
                  className="css-olg5us-TextField"
                  disabled={false}
                  placeholder="Label"
                  required={false}
                />
                <label
                  className="css-u3om98-Label"
                >
                  Label
                   
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField Text Field with Label 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-12qr1pz-TextField"
      >
        <div
          className="css-11budfe-TextField"
        >
          <div
            className="css-1wk1ksn-TextField"
          >
            <div>
              <input
                className="css-ytxe85-TextField"
                placeholder="Label"
                required={false}
              />
              <label
                className="css-u3om98-Label"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField Text Field with Placeholder 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-12qr1pz-TextField"
      >
        <div
          className="css-11budfe-TextField"
        >
          <div
            className="css-uzlsng-TextField"
          >
            <div>
              <input
                className="css-1xq3aiz-TextField"
                placeholder="placeholder "
                required={false}
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField Text Field with Placeholder, icon and size 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-12qr1pz-TextField"
      >
        <div
          className="css-11budfe-TextField"
        >
          <div
            className="css-uzlsng-TextField"
          >
            <div
              className="css-ihi55b-IconWrapper"
            >
              <img
                height="16"
                src="https://brandmark.io/logo-rank/random/pepsi.png"
                width="16"
              />
            </div>
            <div>
              <input
                className="css-1xq3aiz-TextField"
                placeholder="placeholder "
                required={false}
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-12qr1pz-TextField"
      >
        <div
          className="css-11budfe-TextField"
        >
          <div
            className="css-uzlsng-TextField"
          >
            <div>
              <input
                className="css-1xq3aiz-TextField"
                placeholder="placeholder "
                required={false}
              />
            </div>
            <div
              className="css-17foiwq-TextField"
            >
              <img
                height="16"
                src="https://brandmark.io/logo-rank/random/pepsi.png"
                style={
                  Object {
                    "background": "red",
                  }
                }
                width="16"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-12qr1pz-TextField"
      >
        <div
          className="css-11budfe-TextField"
        >
          <div
            className="css-1wk1ksn-TextField"
          >
            <div
              className="css-ihi55b-IconWrapper"
            >
              <img
                height="16"
                src="https://brandmark.io/logo-rank/random/pepsi.png"
                style={
                  Object {
                    "background": "red",
                  }
                }
                width="16"
              />
            </div>
            <div>
              <input
                className="css-ytxe85-TextField"
                placeholder="Label"
                required={false}
              />
              <label
                className="css-u3om98-Label"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField Text Field without Label 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-12qr1pz-TextField"
      >
        <div
          className="css-11budfe-TextField"
        >
          <div
            className="css-uzlsng-TextField"
          >
            <div>
              <input
                className="css-gj85a6-TextField"
                required={false}
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField TextField disabled with label 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div
        className="css-12qr1pz-TextField"
      >
        <div
          className="css-8ls5ln-TextField"
        >
          <div
            className="css-1wk1ksn-TextField"
          >
            <div>
              <input
                className="css-ytxe85-TextField"
                disabled={true}
                placeholder="Label"
                required={false}
              />
              <label
                className="css-u3om98-Label"
              >
                Label
                 
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TextField TextField with label and error handling options 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    className="css-ptimel-Stack"
  >
    <div
      style={
        Object {
          "margin": 5,
        }
      }
    >
      <div>
        <div
          className="css-12qr1pz-TextField"
        >
          <div
            className="css-11budfe-TextField"
          >
            <div
              className="css-1wk1ksn-TextField"
            >
              <div
                className="css-ihi55b-IconWrapper"
              >
                <span
                  className="css-1gnbc76-Icon"
                >
                  <span
                    className="css-1k5aruc-Icon"
                  />
                </span>
              </div>
              <div>
                <input
                  className="css-ytxe85-TextField"
                  placeholder="Label"
                  required={false}
                />
                <label
                  className="css-u3om98-Label"
                >
                  Label
                   
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
